# ml-bet

./: Makefile  ROADMAP.md
ML/: .gitignore  TODO.md  pyproject.toml  requirements.txt
ML/data/: backtest_sweep_latest.json
ML/scripts/: backtest_sanity.py  verify_bt_consistency.py  verify_draws.py  verify_pipeline.py  verify_refactor.py  verify_selection_diagnostics.py  verify_selection_diff.py
ML/scripts/tests/: test_betting_logic.py  test_market_utils.py
ML/src/: api_main.py  backtest_api.py  backtest_ft_1x2.py  build_dataset.py  eval_from_predict.py  features.py  features_online.py  predict.py  predict_live_from_history.py  train_model.py  ws_progress.py
ML/src/api/: main.py  ws_progress.py
ML/src/api/routers/: __init__.py  backtest.py  data.py  meta.py  predict.py  training.py
ML/src/backtest/: __init__.py  cli.py  engine.py
ML/src/config/: allowed_divisions.py
ML/src/dataset/: __init__.py  builder.py  cleaner.py  cli.py
ML/src/experimental/: README.md
ML/src/experimental/backtest/: engine.py
ML/src/experimental/prediction/: engine.py  live.py
ML/src/experimental/training/: cli.py  data.py  engine.py
ML/src/features/: __init__.py  base.py  derived.py  h2h.py  history.py  market.py  pipeline.py
ML/src/prediction/: __init__.py  cli.py  engine.py  live.py
ML/src/production/: backtest.py  backtest_sweep.py  backtest_utils.py  betting_logic.py  bootstrap.py  predict.py  schema.py  train.py  utils.py  utils_market.py
ML/src/training/: __init__.py  cli.py  data.py  engine.py
frontend/: .editorconfig  eslint.config.mjs  nuxt.config.ts  (+3 more)
(+22 files in other folders)
